--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+		{{!-- <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" /> --}}
 		<title>Burgers</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		{{!-- <script src="/assets/js/burgers.js"></script> --}}
+		<script src="/assets/js/public_burgers.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
