--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newsleep="{{devoured}}">
+	<button class="change-dev" data-id="{{id}}" data-newdev="{{devoured}}">
 		{{#if devoured}}YUM!{{else}}EAT ME!{{/if}}
 	</button>
 </li>
