--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
-
+	{{!-- creates button based on if devoured is true or false --}}
 	<button class="change-dev" data-id="{{id}}" data-newdev="{{devoured}}">
-		{{#if devoured}}YUM!{{else}}EAT ME!{{/if}}
+		{{#if devoured}}Eat me!{{else}}Remake me!{{/if}}
 	</button>
 </li>
