--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,41 +1,33 @@
 <h1>Burgers</h1>
 
 <h2>Get yo-self a burger.</h2>
-
+{{!-- list each burger not devoured --}}
 <ul>
   {{#each burgers}}
     {{#unless devoured}}
       {{> burgers/burger-block devoured=true}}
-      {{!-- {{> burgers}} --}}
     {{/unless}}
   {{/each}}
 </ul>
 
 <h2>Burgers devoured.</h2>
-
+{{!-- list each burger devoured --}}
 <ul>
   {{#each burgers}}
     {{#if devoured}}
       {{> burgers/burger-block devoured=false}}
-      {{!-- {{> burgers}} --}}
     {{/if}}
   {{/each}}
 </ul>
 
 <h2>Add a Burger</h2>
 <form class="create-form">
-
+  {{!-- burger name input --}}
   <div class="form-group">
     <label for="burg">Burger Name:</label>
     <input type="text" id="burg" name="name">
   </div>
 
-  <div class="form-group">
-    <label for="dev">Devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured<br>
-    <input type="radio" name="devoured" value="0"> Free to eat
-  </div>
-
-    {{!-- Will call POST --}}
+  {{!-- Will call POST --}}
   <button type="submit">Add Burger</button>
 </form>
