--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,6 +2,6 @@
 	{{burger_name}}
 	{{!-- creates button based on if devoured is true or false --}}
 	<button class="change-dev" data-id="{{id}}" data-newdev="{{devoured}}">
-		{{#if devoured}}Eat me!{{else}}Remake me!{{/if}}
+		{{#if devoured}}Eat{{else}}Re-Grill{{/if}}
 	</button>
 </li>
